# numopt

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: ConfigureLibrary.cmake  ConfigureTest.cmake  FindMKL.cmake  FindPackages.cmake  FindSpectra.cmake  InstallLibrary.cmake  SetCMakeEnvironment.cmake
docs/: numopt.puml
exe/: CMakeLists.txt  davidson_timings.cpp
include/: BaseDescent.hpp  BaseEigenproblemSolver.hpp  BaseMatrixSolver.hpp  BaseMinimizer.hpp  BaseNewtonDescent.hpp  BaseSystemOfEquationsSolver.hpp  DavidsonSolver.hpp  DenseSolver.hpp  Eigenpair.hpp  EigenproblemSolverOptions.hpp  NewtonDescentVector.hpp  NewtonMinimizer.hpp  NewtonSystemOfEquationsSolver.hpp  SolverType.hpp  SparseSolver.hpp  VectorNewtonDescent.hpp  common.hpp  numopt.hpp  step.hpp
src/: BaseDescent.cpp  BaseEigenproblemSolver.cpp  BaseMatrixSolver.cpp  BaseMinimizer.cpp  BaseNewtonDescent.cpp  BaseSystemOfEquationsSolver.cpp  CMakeLists.txt  DavidsonSolver.cpp  DenseSolver.cpp  Eigenpair.cpp  NewtonDescentVector.cpp  NewtonMinimizer.cpp  NewtonSystemOfEquationsSolver.cpp  SparseSolver.cpp  VectorNewtonDescent.cpp  step.cpp
tests/: DavidsonSolver_test.cpp  DenseSolver_test.cpp  Eigenpair_test.cpp  NewtonDescentVector_test.cpp  NewtonMinimizer_test.cpp  NewtonSystemOfEquationsSolver_test.cpp  SparseSolver_test.cpp  VectorNewtonDescent_test.cpp
tools/: HEADER
tools/conda.recipe/: build.sh  meta.yaml
